<resources>
    <string name="app_name">MyGPS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create new account</string>
    <string name="have_an_account">Have an account? Log in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="my_gps">My GPS</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset password</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="google_maps_key">AIzaSyAs49XT9QoIaTdPHJ2sE0uQV-zp6BD6EIQ</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="str_tv_distance_time">Distance</string>
</resources>